--- a/style.css
+++ b/style.css
@@ -207,6 +207,7 @@ a{
     justify-content: center;
     align-items: center;
     gap: 2rem;
+    margin-block-end: 2.5rem;
 }
 
 .modern-text-info{
@@ -214,6 +215,11 @@ a{
     font-size: 1.125rem;
     font-weight: 500;
     line-height: 150%;
+}
+
+.footer-number{
+    margin-bottom: -12rem;
+    margin-top: 4rem;
 }
 
 /* TO DO: 
@@ -230,7 +236,7 @@ footer{
     background-image: url("assets/desktop/image-footer.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 1rem;
+    padding: 4rem;
     position: relative;
     z-index: 4;
     color: #FFF;
@@ -248,19 +254,27 @@ footer::before{
     z-index: 1;
 }
 
+.footer-number{
+    position: relative;
+    z-index: 9999;
+   
+    
+}
 
-
+.rounded-heading{
+    background-color: white;
+   
+}
 
 .footer-info{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     z-index: 9999;
     position: relative;
     align-items: flex-start;
-    gap: 2rem;
+    gap: 0rem;
     margin: 0 auto;
-    border: 2px solid white;
 }
 
 .footer-heading{
@@ -286,7 +300,7 @@ footer::before{
 
 
 
-@media (max-width: 1100px){
+@media (max-width: 1165px){
     .hero{
         display: flex;
         flex-direction: column;
@@ -299,6 +313,36 @@ footer::before{
 
     .tablet-img{
         display: block;
+    }
+
+    .img-grid{
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .footer-info{
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-heading{
+        text-wrap: nowrap;
+    }
+
+    .footer-text{
+        text-align: center;
+    }
+
+    .tablet-img{
+        max-width: clamp(100vw);
+        padding: 2.5rem;
+    }
+
+    .hero{
+        max-width: 730px;
     }
 }
 
